# fastapi-frontend-html-js-basico-01

./: .env_example  .gitignore  .pre-commit-config.yaml  .pylintrc  .secrets_example.toml  README.md  docker-compose.yml  init_config.sh  pyproject.toml  requirements.txt  settings.toml
app/: main.py  main_base.py
app/routes/: estacoes.py
app/schemas/: schemas.py
app/templates/: estacoes_js.html  index.html  mapas.html
